<resources>
    <string name="app_name">Geležinis Kelias</string>
    <string name="app_header_title">Geležinis Kelias</string>
    <string name="main_menu_subtitle">Pagrindinis meniu</string>
    <string name="btn_report_accident">Registruoti naują\neismo įvykį</string>
    <string name="btn_view_reports">Mano\nįvykiai</string>
    <string name="btn_vehicle_info">Transporto\npriemonės informacija</string>
    <string name="btn_emergency_contacts">Skubios pagalbos\nkontaktai</string>
    <string name="desc_settings">Nustatymai</string>
    <string name="toast_settings">Atidaryti nustatymus</string>
    <string name="toast_report">Navigacija į: Registruoti naują eismo įvykį</string>
    <string name="toast_view_reports">Navigacija į: Mano įvykiai</string>
    <string name="toast_vehicle">Navigacija į: Transporto priemonės informacija</string>
    <string name="toast_emergency">Navigacija į: Skubios pagalbos kontaktai</string>
    <string name="title_view_reports">Mano įvykiai</string>
    <string name="title_create_report">Naujas įvykis</string>
    <string name="title_settings">Nustatymai</string>
    <string name="label_select_language">Pasirinkite kalbą</string>
    <string name="lang_english">Anglų</string>
    <string name="lang_lithuanian">Lietuvių</string>
    <string name="lang_russian">Rusų</string>
    <string name="btn_save">Išsaugoti pakeitimus</string>
    <string name="label_select_theme">Pasirinkite temą</string>
    <string name="theme_system">Sistemos numatytoji</string>
    <string name="theme_light">Šviesi</string>
    <string name="theme_dark">Tamsi</string>
    <string name="title_report_details">Informacija apie įvykį</string>
    <string name="label_location">Vieta</string>
    <string name="label_date_time">Data ir laikas</string>
    <string name="label_plate_number">Valstybinis numeris</string>
    <string name="label_description">Aprašymas</string>
    <string name="status_waiting">Laukia</string>
    <string name="status_confirmed">Patvirtinta</string>
    <string name="status_issue">Problema</string>
    <string name="header_vehicle_a">Transporto priemonė A</string>
    <string name="header_vehicle_b">Transporto priemonė B</string>
    <string name="label_insured">Draudėjas / Savininkas</string>
    <string name="label_vehicle">Informacija apie transporto priemonę</string>
    <string name="header_insurance_info">Draudimo informacija</string>
    <string name="label_insurance_company">Draudimo bendrovė</string>
    <string name="label_driver">Informacija apie vairuotoją</string>
    <string name="label_circumstances">Avarijos aplinkybės</string>
    <string name="header_circumstances">Avarijos aplinkybės</string>
    <string name="header_photos">Avarijos nuotraukos</string>
    <string name="header_vehicle_insurance">Transp. priemonės ir draudimo info</string>
    <string name="header_insurance_driver">Draudimo ir vairuotojo informacija</string>
    <string name="header_driver_vehicle">Vairuotojo ir transp. priemonės info</string>
    <string name="header_witnesses">Liudininkai</string>
    <string name="header_damage">Sugadinimų schema</string>
    <string name="header_signature">Parašas ir kaltė</string>
    <string name="header_license_plates">Valstybiniai numeriai</string>
    <string name="label_your_vehicle">Jūsų transporto priemonė</string>
    <string name="label_other_party">Kita šalis</string>
    <string name="hint_plate_example">ABC123</string>
    <string name="label_has_trailer">Turi priekabą</string>
    <string name="hint_trailer_plate">Priekabos numeris</string>
    <string name="label_no_plate">Nėra valstybinio numerio</string>
    <string name="header_time_location">Laikas ir vieta</string>
    <string name="label_date_mandatory">Data *</string>
    <string name="label_time_mandatory">Laikas *</string>
    <string name="label_address">Adresas</string>
    <string name="hint_address_format">Gatvė, namo nr., miestas</string>
    <string name="hint_driver_address">Pilnas adresas (Gatvė, Namo nr., Miestas ir kt.)</string>
    <string name="label_or">ARBA</string>
    <string name="label_map_instruction">Pažymėkite įvykio vietą žemėlapyje *</string>
    <string name="placeholder_map_loading">Žemėlapis kraunamas...</string>
    <string name="hint_date_format">MMMM-MM-DD</string>
    <string name="hint_time_format">VV:MM</string>
    <string name="open_map_to_select_location">Atidaryti žemėlapį vietos pasirinkimui</string>
    <string name="confirm_location">Patvirtinti pasirinkimą</string>
    <string name="field_name">Vardas, pavardė:</string>
    <string name="field_first_name">Vardas *</string>
    <string name="field_last_name">Pavardė *</string>
    <string name="field_address">Adresas:</string>
    <string name="field_contact">Kontaktai:</string>
    <string name="field_make_type">Markė/tipas:</string>
    <string name="field_policy_no">Poliso Nr.:</string>
    <string name="field_license_no">Vairuotojo pažymėjimo Nr.:</string>
    <string name="field_license_category">Vairuotojo pažymėjimo kategorija</string>
    <string name="field_license_expiry">Vairuotojo pažymėjimo galiojimas</string>
    <string name="field_personal_id">Asmens kodas *</string>
    <string name="field_email">El. paštas</string>
    <string name="field_phone">Telefonas</string>
    <string name="field_country">Valstybė *</string>
    <string name="photos_header">Prašome nufotografuoti arba pridėti avarijos vietos ir transporto priemonės apgadinimų nuotraukas.</string>
    <string name="date">Data</string>
    <string name="time">Laikas</string>
    <string name="btn_next">Toliau</string>
    <string name="btn_previous">Atgal</string>
    <string name="btn_finish">Baigti</string>
    <string name="hint_location">Įveskite įvykio vietą</string>
    <string name="hint_description">Aprašykite kas nutiko</string>
    <string name="desc_use_current_location">Užpildyti įvykio vietą pagal GPS</string>
    <string name="hint_name">Vardas Pavardė</string>
    <string name="hint_plate">Valstybinis numeris</string>
    <string name="hint_dob">Gimimo data (YYYY-MM-DD)</string>
    <string name="hint_insurance_covers">Ar draudimas dengia materialinę žalą?</string>
    <string name="step_indicator">%1$d žingsnis iš %2$d</string>
    <string name="title_summary">Suvestinė</string>
    <string name="btn_download_report">Parsisiųsti ataskaitą</string>
    <string name="summary_photos">Nuotraukos:</string>
    <string name="summary_demo_note">Pastaba: Šis įvykis yra juodraštis ir nebus išsaugotas šioje demo versijoje.</string>
    <string name="label_circ_prompt">Pažymėkite viską, kas tinka šiai transporto priemonei:</string>
    <string name="label_circ_prompt_multi">Pažymėkite viską, kas tinka kiekvienai transporto priemonei</string>
    <string name="btn_addphoto">Paspauskite, kad pridėtumėte nuotrauką</string>
    <string name="btn_pick_gallery">Pasirinkti iš galerijos</string>
    <string name="summary_general_info">BENDRA INFORMACIJA</string>
    <string name="summary_date_time">Data ir laikas: %1$s</string>
    <string name="summary_address">Adresas: %1$s</string>
    <string name="summary_not_specified">Nenurodyta</string>
    <string name="summary_coordinates">Koordinatės: %1$.5f, %2$.5f</string>
    <string name="summary_description">Aprašymas: %1$s</string>
    <string name="summary_witnesses">LIUDININKAI</string>
    <string name="summary_no_witnesses">Liudininkų nėra.</string>
    <string name="summary_fault_signatures">KALTĖ IR PARAŠAI</string>
    <string name="summary_fault_not_assigned">Kaltininkas: Nepriskirtas</string>
    <string name="summary_fault_both">Kaltininkas: Abi transporto priemonės</string>
    <string name="summary_fault_vehicle">Kaltininkas: Transporto priemonė %1$s</string>
    <string name="summary_signature_a">Parašas A: %1$s</string>
    <string name="summary_signature_b">Parašas B: %1$s</string>
    <string name="summary_signed">✓ Pasirašyta</string>
    <string name="summary_missing">✗ Trūksta</string>
    <string name="summary_plate">Numeris: %1$s</string>
    <string name="summary_trailer">Priekaba: %1$s</string>
    <string name="summary_yes_no_plate">Taip (be numerio)</string>
    <string name="summary_vehicle_label">Transp. priemonė: %1$s</string>
    <string name="summary_na">Nėra duomenų</string>
    <string name="summary_driver">Vairuotojas: %1$s %2$s</string>
    <string name="summary_contact">Kontaktai: %1$s</string>
    <string name="summary_insurance">Draudimas: %1$s</string>
    <string name="summary_policy_format">(Polisas: %1$s)</string>
    <string name="summary_damages">Sugadinimai: %1$s</string>
    <string name="summary_none_noted">Nepasirinkta</string>
    <string name="summary_circumstances">Aplinkybės: %1$s</string>
    <string name="summary_none_selected">Nepasirinkta</string>
    <string name="label_any_witnesses">Ar yra liudininkų?</string>
    <string name="btn_add_witness">Pridėti liudininką</string>
    <string name="btn_remove">Pašalinti</string>
    <string name="hint_phone_format">Telefono numeris (pvz. +370...)</string>
    <string name="label_witnesses">Liudininkai</string>
    <string name="label_damage">Sugadinimai</string>
    <string name="label_mark_damages">Pažymėkite sugadintas vietas kiekvienai transporto priemonei</string>
    <string name="instr_damage">1. Rodykle pažymėkite pirminį smūgio tašką\n2. Paspauskite ant transporto priemonės vietos, kad pažymėtumėte sugadinimą</string>
    <string name="label_indicate_fault">Nurodykite kaltąją šalį</string>
    <string name="label_signatures">Parašai</string>
    <string name="label_at_fault_party">Kaltoji šalis</string>
    <string name="hint_tap_to_sign">Paspauskite čia, kad pasirašytumėte</string>
    <string name="btn_clear">Išvalyti</string>
    <string name="pdf_title">Eismo įvykio deklaracija</string>
    <string name="pdf_label_location">Vieta: %1$s</string>
    <string name="pdf_label_description">Aprašymas: %1$s</string>
    <string name="pdf_label_date">Data: %1$s</string>
    <string name="pdf_header_witnesses">Liudininkai</string>
    <string name="pdf_header_photos">Nuotraukos</string>
    <string name="pdf_label_owner">Savininkas: </string>
    <string name="pdf_label_address">Adresas: </string>
    <string name="pdf_label_vehicle">Transporto priemonė: </string>
    <string name="pdf_label_plate">Valst. numeris: </string>
    <string name="pdf_label_insurance">Draudimas: </string>
    <string name="pdf_label_policy">Polisas: </string>
    <string name="pdf_label_driver">Vairuotojas: </string>
    <string name="pdf_label_dob">Gimimo data: </string>
    <string name="circ_parked_full">Stovėjo / buvo priparkuota</string>
    <string name="circ_stopping_full">Stojo</string>
    <string name="circ_starting_off_full">Pradėjo važiuoti</string>
    <string name="circ_opening_door_full">Atidarė duris</string>
    <string name="circ_leaving_parking_full">Išvažiavo iš stovėjimo vietos, privataus kelio ar tako</string>
    <string name="circ_entering_parking_full">Įvažiavo į stovėjimo vietą, privatų kelią ar taką</string>
    <string name="circ_entering_roundabout_full">Įvažiavo į žiedinę sankryžą</string>
    <string name="circ_in_roundabout_full">Važiavo žiedinėje sankryžoje</string>
    <string name="circ_rear_end_full">Atsitrenkė į tos pačios krypties transporto priemonės galą toje pačioje eismo juostoje</string>
    <string name="circ_changing_lanes_full">Keitė eismo juostą</string>
    <string name="circ_overtaking_full">Lenkė</string>
    <string name="circ_turning_right_full">Suko į dešinę</string>
    <string name="circ_turning_left_full">Suko į kairę</string>
    <string name="circ_reversing_full">Važiavo atbulomis</string>
    <string name="circ_opposite_lane_full">Išvažiavo į priešpriešinę eismo juostą</string>
    <string name="circ_from_right_full">Važiavo iš dešinės sankryžoje</string>
    <string name="circ_failed_priority_full">Nepaisė pirmumo ženklo arba važiavo degant raudonam šviesoforo signalui</string>
</resources>